# ice-berg-tracker

./: .env.example  .gitignore  README.md  cozy-singing-hinton.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: README.md  package.json  pyproject.toml
apps/api/app/: config.py  db.py  logging_config.py  main.py  models.py
apps/api/app/api/: icebergs.py
apps/api/app/data/: fetcher.py  metno_fetcher.py  parser.py
apps/api/app/services/: __init__.py  iceberg_service.py
apps/api/scripts/: backfill_history.py  seed_db.py
apps/api/tests/: test_models.py  test_parser.py
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/: IcebergMarker.tsx  Map.tsx  MapView.tsx  Navbar.tsx
apps/web/src/lib/: api.ts  format.ts  types.ts
apps/web/src/styles/: globals.css
